refactor: change site colors

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const date = new Date().getFullYear();
 ---
 
 <footer>
-  <div class="flex flex-col justify-center items-center p-4 gap-2 min-w-full">
+  <div class="flex flex-col justify-center items-center p-4 gap-2">
     <div class="flex flex-col gap-1 items-center justify-center">
       <p class="font-medium">
         Copyright {date} Doesmycode.work
@@ -28,7 +28,7 @@ const date = new Date().getFullYear();
         icon="tabler:mail"
         link="mailto:steve@doesmycode.work"
       />
-      <FooterLink title="Rss" icon="tabler:rss" link="/rss.xml" />
+      <FooterLink title="RSS" icon="tabler:rss" link="/rss.xml" />
     </div>
   </div>
 </footer>
