--- a/src/components/FooterLink.astro
+++ b/src/components/FooterLink.astro
@@ -6,8 +6,8 @@ const { icon, link, title } = Astro.props;
 
 <a href={link}>
   <div
-    class="flex items-center justify-center p-2 rounded-full bg-zinc-200 dark:bg-zinc-800"
+    class="flex items-center justify-center p-2 rounded-full bg-neutral-200 dark:bg-neutral-800"
   >
-    <Icon name={icon} aria-label={title} class="w-5 h-5" />
+    <Icon name={icon} aria-label={title} class="size-5" />
   </div>
 </a>
