--- a/src/components/ThemeSwitch.astro
+++ b/src/components/ThemeSwitch.astro
@@ -26,6 +26,6 @@ import { Icon } from "astro-icon/components";
   class="flex justify-center items-center hover:cursor-pointer"
   id="themeToggle"
 >
-  <Icon class="hidden dark:block w-6 h-6 text-zinc-200" name="tabler:sun" />
-  <Icon class="dark:hidden w-6 h-6 text-zinc-900" name="tabler:moon" />
+  <Icon class="hidden dark:block w-6 h-6 text-neutral-200" name="tabler:sun" />
+  <Icon class="dark:hidden w-6 h-6 text-neutral-900" name="tabler:moon" />
 </div>
