--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -36,7 +36,7 @@ const readTime = Math.round(words / 200);
     </div>
     <Toc headings={headings} />
     <article
-      class="prose dark:prose-invert prose-zinc prose-code:break-all prose-a:break-all min-w-full"
+      class="prose dark:prose-invert prose-neutral prose-code:break-all prose-a:break-all min-w-full"
     >
       <Content />
     </article>
