--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -15,7 +15,7 @@ const { page } = Astro.props;
   {
     page.url.prev && (
       <a href={page.url.prev}>
-        <div class="flex flex-row gap-2 rounded-full bg-zinc-200 dark:bg-zinc-800 py-3 px-4 justify-center items-center hover:opacity-80">
+        <div class="flex flex-row gap-2 rounded-full bg-neutral-200 dark:bg-neutral-800 py-3 px-4 justify-center items-center hover:opacity-80">
           <Icon name="tabler:arrow-left" class="w-4 h-4 text-lg font-medium" />
           <p class="text-md font-medium">Previous</p>
         </div>
@@ -25,7 +25,7 @@ const { page } = Astro.props;
   {
     page.url.next && (
       <a href={page.url.next}>
-        <div class="flex flex-row gap-2 rounded-full bg-zinc-200 dark:bg-zinc-800 py-3 px-4 justify-center items-center hover:opacity-80">
+        <div class="flex flex-row gap-2 rounded-full bg-neutral-200 dark:bg-neutral-800 py-3 px-4 justify-center items-center hover:opacity-80">
           <p class="text-md font-medium">Next</p>
           <Icon name="tabler:arrow-right" class="w-4 h-4 text-lg font-medium" />
         </div>
