--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -7,13 +7,15 @@ const readTime = Math.round(words / 200);
 
 <a href={`/posts/${post.slug}`}>
   <div
-    class="flex flex-col bg-zinc-200 dark:bg-zinc-800 hover:opacity-80 rounded-md p-4 gap-1 max-w-full break-words"
+    class="flex flex-col bg-neutral-200 dark:bg-neutral-800 hover:opacity-80 rounded-md p-4 gap-1 max-w-full break-words"
   >
-    <p class="font-bold text-lg text-zinc-800 dark:text-zinc-300">
+    <p class="font-bold text-lg text-neutral-800 dark:text-neutral-300">
       {post.data.title}
     </p>
-    <p class="text-zinc-700 dark:text-zinc-400">{post.data.description}</p>
-    <p class="text-zinc-700 dark:text-zinc-400">
+    <p class="text-neutral-700 dark:text-neutral-400">
+      {post.data.description}
+    </p>
+    <p class="text-neutral-700 dark:text-neutral-400">
       {new Date(Date.parse(post.data.publishedOn)).toDateString()} &bull;
       {readTime} min read &bull; {post.data.author}
     </p>
