--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -18,11 +18,11 @@ const formatter = new Intl.NumberFormat("en", {
 ---
 
 <div
-  class="flex flex-col border-zinc-200 dark:border-zinc-800 border rounded-md p-4 max-w-md gap-2"
+  class="flex flex-col border-neutral-200 dark:border-neutral-800 border rounded-md p-4 max-w-md gap-2"
 >
   <div class="flex flex-row justify-between">
     <div class="flex flex-row gap-2 items-center">
-      <Icon name="tabler:brand-github" class="w-6 h-6" />
+      <Icon name="tabler:brand-github" class="size-6" />
       <a
         href={`https://github.com/${repo}`}
         title={name}
@@ -36,5 +36,5 @@ const formatter = new Intl.NumberFormat("en", {
       <p class="text-base font-medium">{formatter.format(stars)}</p>
     </div>
   </div>
-  <p class="text-base text-zinc-700 dark:text-zinc-400">{description}</p>
+  <p class="text-base text-neutral-700 dark:text-neutral-400">{description}</p>
 </div>
