--- a/src/components/ScrollToTopButton.astro
+++ b/src/components/ScrollToTopButton.astro
@@ -34,7 +34,7 @@ import { Icon } from "astro-icon/components";
 </script>
 
 <button
-  class="hidden rounded-full bg-zinc-200 dark:bg-zinc-800 p-4 fixed bottom-4 right-4"
+  class="hidden rounded-full bg-neutral-200 dark:bg-neutral-800 p-4 fixed bottom-4 right-4"
   id="scrollToTop"
   aria-label="Scroll to top"
 >
