--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -38,14 +38,13 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <BaseHeader title={title} />
-    <Header />
     <ViewTransitions />
   </head>
   <body
-    class="bg-neutral-100 dark:bg-neutral-900 text-zinc-800 dark:text-zinc-200 min-h-screen flex flex-col justify-between"
+    class="bg-neutral-100 dark:bg-neutral-900 text-neutral-800 dark:text-neutral-200 min-h-screen flex flex-col justify-between"
   >
+    <Header />
     <slot />
-  </body><footer>
     <Footer />
-  </footer>
+  </body>
 </html>
