--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -39,7 +39,7 @@ const projects: Projects[] = [
     <div class="flex flex-col gap-4 items-stretch">
       <p class="text-4xl font-bold">Projects</p>
       <p>
-        I have worked on a lot of project but the ones below are my favorites
+        I have worked on a lot of project but this is a list of my favorites.
       </p>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         {projects.map((project) => <ProjectCard {...project} />)}
