--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -40,7 +40,7 @@ const { repo, description, name } = Astro.props;
 
 <astro-project data-repo={repo}>
   <div
-    class="flex flex-col border-neutral-200 dark:border-neutral-800 border rounded-md p-4 max-w-md gap-2"
+    class="flex flex-col border-neutral-200 dark:border-neutral-800 border rounded-md p-4 max-w-md gap-2 h-full"
   >
     <div class="flex flex-row justify-between">
       <div class="flex flex-row gap-2 items-center">
