--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       />
     </div>
     <div>
-      <p class="font-bold text-3xl">Hello 👋, I am Stavros, a</p>
+      <p class="font-bold text-3xl">Yo, I am Stavros, a</p>
       <p
         id="typewriter"
         class="min-h-14 leading-relaxed font-bold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%"
