--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     <div class="flex flex-row gap-2 items-center justify-center">
       <a
         href="/about"
-        class="bg-neutarl-300 dark:bg-neutral-800 rounded-md py-2 px-3 hover:opacity-80"
+        class="bg-neutral-300 dark:bg-neutral-800 rounded-md py-2 px-3 hover:opacity-80"
         >About</a
       >
       <a
