--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -41,7 +41,7 @@ const { title } = Astro.props;
     <ViewTransitions />
   </head>
   <body
-    class="bg-neutral-100 dark:bg-neutral-900 text-neutral-800 dark:text-neutral-200 min-h-screen flex flex-col justify-between"
+    class="bg-neutral-100 dark:bg-neutral-900 text-neutral-800 dark:text-neutral-200 min-h-dvh flex flex-col justify-between"
   >
     <Header />
     <slot />
