refactor: change site style

--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -52,4 +52,4 @@ const analyticsEnable = import.meta.env.VITE_ANALYTICS_ENABLE;
 
 <astro-analytics data-analytics-enable={analyticsEnable}></astro-analytics>
 
-<title>{title} | {siteTitle}</title>
+<title>{title} - {siteTitle}</title>
