--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -5,5 +5,9 @@ const {
 ---
 
 <a href={link}>
-  <p class="font-medium text-lg">{title}</p>
+  <p
+    class="font-medium text-lg hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors"
+  >
+    {title}
+  </p>
 </a>
