--- a/src/components/Toc.astro
+++ b/src/components/Toc.astro
@@ -29,7 +29,7 @@ for (const heading of headings) {
           <li class="font-medium">
             <a
               href={`#${heading.slug}`}
-              class="hover:opacity-80 font-normal underline text-blue-500"
+              class="font-normal underline text-blue-500 hover:text-blue-400 transition-colors"
             >
               {heading.text}
             </a>
@@ -39,7 +39,7 @@ for (const heading of headings) {
                   <li class="font-medium">
                     <a
                       href={`#${subheading.slug}`}
-                      class="hover:opacity-80 font-normal underline text-blue-500"
+                      class="font-normal underline text-blue-500 hover:text-blue-400 transition-colors"
                     >
                       {subheading.text}
                     </a>
