--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -40,7 +40,7 @@ const { repo, description, name } = Astro.props;
 
 <astro-project data-repo={repo}>
   <div
-    class="flex flex-col border-neutral-200 dark:border-neutral-800 border rounded-md p-4 max-w-md gap-2 h-full"
+    class="flex flex-col bg-neutral-50 dark:bg-neutral-950 border-[0.5px] border-neutral-200 dark:border-neutral-800 hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors rounded-md p-4 max-w-md gap-2 h-full drop-shadow-sm"
   >
     <div class="flex flex-row justify-between">
       <div class="flex flex-row gap-2 items-center">
@@ -48,17 +48,17 @@ const { repo, description, name } = Astro.props;
         <a
           href={`https://github.com/${repo}`}
           title={name}
-          class="text-blue-600 dark:text-blue-400 hover:opacity-80 underline text-base font-medium"
+          class="text-blue-700 dark:text-blue-500 hover:text-blue-600 dark:hover:text-blue-400 transition-colors underline text-base font-medium"
         >
           {name}
         </a>
       </div>
       <div class="flex flex-row gap-1 items-center">
         <Icon name="tabler:star-filled" class="w-4 h-4 text-yellow-500" />
-        <p class="text-base font-medium" id={`${repo}-stars`}></p>
+        <p class="font-medium" id={`${repo}-stars`}></p>
       </div>
     </div>
-    <p class="text-base text-neutral-700 dark:text-neutral-400">
+    <p>
       {description}
     </p>
   </div>
