--- a/src/components/ScrollToTopButton.astro
+++ b/src/components/ScrollToTopButton.astro
@@ -34,7 +34,7 @@ import { Icon } from "astro-icon/components";
 </script>
 
 <button
-  class="hidden rounded-full bg-neutral-200 dark:bg-neutral-800 p-4 fixed bottom-4 right-4"
+  class="hidden drop-shadow-sm bg-neutral-50 dark:bg-neutral-950 border-[0.5px] border-neutral-200 dark:border-neutral-800 rounded-full hover:text-neutral-700 dark:hover:text-neutral-200 transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 p-4 fixed bottom-4 right-4"
   id="scrollToTop"
   aria-label="Scroll to top"
 >
