--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -4,7 +4,7 @@ import BaseLayout from "./BaseLayout.astro";
 ---
 
 <BaseLayout title="About">
-  <div class="flex flex-col flex-1 p-4 justify-center items-center">
+  <div class="flex flex-col p-4 justify-center items-center">
     <article
       class="prose dark:prose-invert prose-neutral prose-code:break-all prose-a:break-all max-w-5xl"
     >
