--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,14 +3,12 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout title="Not found">
-  <div
-    class="flex flex-col flex-1 gap-2 p-4 items-center justify-center text-center"
-  >
+  <div class="flex flex-col gap-2 p-4 items-center justify-center text-center">
     <p class="text-2xl font-bold">Not Found</p>
     <p class="text-lg">
       This page was not found, you might want to go <a
         href="/"
-        class="text-blue-600 dark:text-blue-400 hover:opacity-80 underline"
+        class="text-blue-600 dark:text-blue-400 hover:text-blue-500 dark:hover:text-blue-300 transition-colors underline"
         >home</a
       >
     </p>
