--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,83 +3,60 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <script>
+  import { Typewriter } from "../lib/typewriter";
+
   document.addEventListener("astro:page-load", async () => {
-    const typewriter = document.getElementById("typewriter");
     const words = [
-      "Software Developer",
+      "Full Stack Developer",
       "Raspberry Pi Enthusiast",
       "Reckless Engineer",
       "Basketball Lover",
     ];
 
-    function type(word: string) {
-      for (let i = 0; i < word.length; i++) {
-        setTimeout(() => {
-          if (typewriter) {
-            typewriter.innerHTML += word.charAt(i);
-          }
-        }, i * 100);
-      }
-    }
+    const typewriterElement = document.getElementById("typewriter");
+    const typewriter = new Typewriter(words);
 
-    function remove() {
-      if (typewriter && typewriter.innerHTML) {
-        for (let i = 0; i < typewriter!.innerHTML.length; i++) {
-          setTimeout(() => {
-            typewriter.innerHTML = typewriter.innerHTML.slice(0, -1);
-          }, i * 100);
-        }
-      }
-    }
-
-    while (true) {
-      for (const word of words) {
-        await new Promise((resolve) => {
-          type(word);
-          setTimeout(resolve, word.length * 100 + 1000);
-        });
-
-        await new Promise((resolve) => {
-          if (typewriter && typewriter.innerHTML) {
-            remove();
-            setTimeout(resolve, typewriter!.innerHTML.length * 100);
-          }
-        });
-      }
+    if (typewriterElement && !typewriter.hasElement) {
+      typewriter.setElement(typewriterElement);
+      typewriter.start();
     }
   });
 </script>
 
 <BaseLayout title="Home">
-  <div
-    class="flex flex-col flex-1 items-center justify-center text-center gap-4 p-4"
-  >
-    <div>
+  <div class="flex flex-col items-center justify-center">
+    <div class="flex flex-col items-center text-center gap-4">
       <img
         src="/profile.png"
-        alt="Profile Image"
+        alt="Profile image"
         class="size-44 rounded-full"
       />
-    </div>
-    <div>
-      <p class="font-bold text-3xl">Hello, I am Stavros, a</p>
-      <p
-        id="typewriter"
-        class="min-h-14 leading-relaxed font-bold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%"
-      >
-      </p>
-    </div>
-    <div class="flex flex-row gap-2 items-center justify-center">
-      <a
-        href="/about"
-        class="bg-neutral-300 dark:bg-neutral-800 rounded-md py-2 px-3 hover:opacity-80"
-        >About</a
-      >
-      <a
-        href="/posts"
-        class="bg-neutral-300 dark:bg-neutral-800 rounded-md py-2 px-3 hover:opacity-80"
-        >Posts</a
-      >
+      <div class="flex flex-col items-center text-center">
+        <h1 class="text-3xl font-semibold">Hello, I am Stavros a</h1>
+        <div class="flex flex-row items-center justify-center gap-0.5">
+          <h1
+            class="text-3xl h-9 font-semibold text-transparent bg-gradient-to-r from-cyan-500 to-blue-500 bg-clip-text w-fit"
+            id="typewriter"
+          >
+          </h1>
+          <div
+            class="h-[1.875rem] w-0.5 bg-neutral-800 dark:bg-neutral-300 animate-blink rounded-sm"
+          >
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-row gap-2 items-center justify-center">
+        <a
+          href="/about"
+          class="drop-shadow-sm bg-neutral-50 dark:bg-neutral-950 border-[0.5px] border-neutral-200 dark:border-neutral-800 rounded-lg py-2 px-3 hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors"
+          >About</a
+        >
+        <a
+          href="/posts"
+          class="drop-shadow-sm bg-neutral-50 dark:bg-neutral-950 border-[0.5px] border-neutral-200 dark:border-neutral-800 rounded-lg py-2 px-3 hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors"
+          >Posts</a
+        >
+      </div>
     </div>
   </div>
 </BaseLayout>
