--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -17,7 +17,7 @@ const { page }: { page: Page } = Astro.props;
 ---
 
 <BaseLayout title="Posts">
-  <div class="flex flex-col flex-1 p-4 items-center">
+  <div class="flex flex-col p-4 items-center">
     <div class="flex flex-col gap-4 items-start">
       <a href="/posts">
         <p class="text-2xl font-bold">Posts</p>
