--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -35,7 +35,7 @@ const projects: Projects[] = [
 ---
 
 <BaseLayout title="Projects">
-  <div class="flex flex-col flex-1 p-4 justify-center items-center">
+  <div class="flex flex-col p-4 justify-center items-center">
     <div class="flex flex-col gap-4 items-stretch">
       <p class="text-4xl font-bold">Projects</p>
       <p>
