refactor: use button for theme toggle

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -4,10 +4,9 @@ const {
 } = Astro.props;
 ---
 
-<a href={link}>
-  <p
-    class="font-medium text-lg hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors"
-  >
-    {title}
-  </p>
+<a
+  href={link}
+  class="font-medium text-lg hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors"
+>
+  {title}
 </a>
