--- a/src/components/ThemeSwitch.astro
+++ b/src/components/ThemeSwitch.astro
@@ -20,10 +20,11 @@ import { Icon } from "astro-icon/components";
   });
 </script>
 
-<div
+<button
   class="flex justify-center items-center hover:cursor-pointer transition duration-200 ease-in-out"
   id="themeToggle"
+  aria-label="Toggle theme"
 >
   <Icon class="hidden dark:block w-6 h-6" name="tabler:sun" />
   <Icon class="dark:hidden w-6 h-6" name="tabler:moon" />
-</div>
+</button>
