fix: fix z index

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -45,7 +45,7 @@ const { title } = Astro.props;
     class="bg-neutral-50 dark:bg-neutral-950 text-neutral-800 dark:text-neutral-300 min-h-dvh flex flex-col justify-between"
   >
     <Header />
-    <div class="fixed h-screen w-full">
+    <div class="fixed h-dvh w-full">
       <div
         class={cn(
           "absolute inset-0",
