--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -23,21 +23,23 @@ const readTime = Math.round(words / 200);
 ---
 
 <BaseLayout title={post.data.title}>
-  <div class="flex flex-col py-4 px-4 md:px-32 gap-4 min-w-full">
-    <div class="flex flex-col gap-1">
-      <p class="text-2xl font-bold">{post.data.title}</p>
-      <p class="text-md">
-        {new Date(post.data.publishedOn).toDateString()} &bull; {readTime} min read
-        &bull; {post.data.author}
-      </p>
+  <div class="flex flex-col p-4 items-center">
+    <div class="flex flex-col items-start gap-4">
+      <div class="flex flex-col gap-1">
+        <p class="text-2xl font-bold">{post.data.title}</p>
+        <p class="text-md">
+          {new Date(post.data.publishedOn).toDateString()} &bull; {readTime} min
+          read &bull; {post.data.author}
+        </p>
+      </div>
+      <Toc headings={headings} />
+      <article
+        class="prose dark:prose-invert prose-neutral prose-code:break-all prose-a:break-all max-w-screen-md"
+      >
+        <Content />
+      </article>
+      <ScrollToTopButton />
+      <Comments />
     </div>
-    <Toc headings={headings} />
-    <article
-      class="prose dark:prose-invert prose-neutral prose-code:break-all prose-a:break-all min-w-full"
-    >
-      <Content />
-    </article>
-    <ScrollToTopButton />
-    <Comments />
   </div>
 </BaseLayout>
