--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,7 @@ const date = new Date().getFullYear();
 ---
 
 <footer>
-  <div
-    class="flex flex-col justify-center items-center p-4 gap-2 relative z-20"
-  >
+  <div class="flex flex-col justify-center items-center p-4 gap-2 z-10">
     <div class="flex flex-col gap-1 items-center justify-center">
       <p class="font-medium">
         Copyright {date} Doesmycode.work
