--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -60,7 +60,7 @@ const navItems = [
       />
       <div
         id="menu"
-        class="fixed top-0 left-0 min-h-screen z-50 inset-0 bg-neutral-50 dark:bg-neutral-950 flex-col gap-4 items-center justify-center hidden"
+        class="fixed top-0 left-0 h-dvh inset-0 bg-neutral-50 dark:bg-neutral-950 flex-col gap-4 items-center justify-center hidden"
       >
         <Icon
           id="menu-close"
