refactor: change styling (#22)
* refactor: change site style

* refactor: use button for theme toggle

* fix: fix z index

* fix: add relative position to footer

* chore: remove useless npm flag

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,7 +41,7 @@ const navItems = [
 </script>
 
 <header
-  class="sticky top-0 z-10 bg-opacity-30 dark:bg-opacity-30 backdrop-filter backdrop-blur-lg bg-neutral-200 dark:bg-neutral-800 border-b border-neutral-200 dark:border-neutral-800"
+  class="sticky top-0 z-20 bg-opacity-30 dark:bg-opacity-30 backdrop-filter backdrop-blur-lg bg-neutral-50 dark:bg-neutral-950 border-b border-neutral-200 dark:border-neutral-800"
 >
   <div class="flex items-center justify-between p-4">
     <div class="flex flex-row gap-2">
@@ -60,7 +60,7 @@ const navItems = [
       />
       <div
         id="menu"
-        class="fixed top-0 left-0 min-h-screen z-50 inset-0 bg-neutral-100 dark:bg-neutral-900 flex-col gap-4 items-center justify-center hidden"
+        class="fixed top-0 left-0 h-dvh inset-0 bg-neutral-50 dark:bg-neutral-950 flex-col gap-4 items-center justify-center hidden"
       >
         <Icon
           id="menu-close"
