--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import BaseHeader from "../components/BaseHeader.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import { ViewTransitions } from "astro:transitions";
+import { cn } from "../lib/utils";
 
 const { title } = Astro.props;
 ---
@@ -41,10 +42,27 @@ const { title } = Astro.props;
     <ViewTransitions />
   </head>
   <body
-    class="bg-neutral-100 dark:bg-neutral-900 text-neutral-800 dark:text-neutral-200 min-h-dvh flex flex-col justify-between"
+    class="bg-neutral-50 dark:bg-neutral-950 text-neutral-800 dark:text-neutral-300 min-h-dvh flex flex-col justify-between"
   >
     <Header />
-    <slot />
+    <div class="fixed h-dvh w-full">
+      <div
+        class={cn(
+          "absolute inset-0",
+          "[background-size:40px_40px]",
+          "[background-image:linear-gradient(to_right,#e5e5e5_1px,transparent_1px),linear-gradient(to_bottom,#e5e5e5_1px,transparent_1px)]",
+          "dark:[background-image:linear-gradient(to_right,#171717_1px,transparent_1px),linear-gradient(to_bottom,#171717_1px,transparent_1px)]",
+        )}
+      >
+      </div>
+      <div
+        class="absolute inset-0 bg-neutral-50 dark:bg-neutral-950 [mask-image:radial-gradient(ellipse_at_center,transparent_20%,#0a0a0a)] dark:[mask-image:radial-gradient(ellipse_at_center,transparent_20%,#fafafa)]"
+      >
+      </div>
+    </div>
+    <div class="flex-1 relative z-10 flex flex-col items-center justify-center">
+      <slot />
+    </div>
     <Footer />
   </body>
 </html>
