fix: fix pre overflow

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -34,7 +34,7 @@ const readTime = Math.round(words / 200);
       </div>
       <Toc headings={headings} />
       <article
-        class="prose dark:prose-invert prose-neutral prose-code:break-all prose-a:break-all max-w-screen-md"
+        class="prose dark:prose-invert prose-neutral prose-pre:max-w-[85vw] md:prose-pre:max-w-none max-w-screen-md"
       >
         <Content />
       </article>
