--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -60,7 +60,7 @@ const { title } = Astro.props;
       >
       </div>
     </div>
-    <div class="flex-1 relative z-10 flex flex-col items-center justify-center">
+    <div class="flex-1 relative z-10 flex flex-col items-center justify-center overflow-hidden">
       <slot />
     </div>
     <Footer />
