refactor: apply overflow prevention styles to about layout

--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -6,7 +6,7 @@ import BaseLayout from "./BaseLayout.astro";
 <BaseLayout title="About">
   <div class="flex flex-col p-4 justify-center items-center">
     <article
-      class="prose dark:prose-invert prose-neutral prose-code:break-all prose-a:break-all max-w-5xl"
+      class="prose dark:prose-invert prose-neutral prose-pre:max-w-[85vw] md:prose-pre:max-w-none prose-code:break-all prose-a:break-all max-w-screen-md"
     >
       <slot />
     </article>
