--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -152,22 +152,7 @@ const { title } = Astro.props;
     class="bg-neutral-50 dark:bg-neutral-950 text-neutral-800 dark:text-neutral-300 min-h-dvh flex flex-col justify-between"
   >
     <Header />
-    <div class="fixed h-dvh w-full">
-      <div
-        class={cn(
-          "absolute inset-0",
-          "[background-size:40px_40px]",
-          "[background-image:linear-gradient(to_right,#e5e5e5_1px,transparent_1px),linear-gradient(to_bottom,#e5e5e5_1px,transparent_1px)]",
-          "dark:[background-image:linear-gradient(to_right,#171717_1px,transparent_1px),linear-gradient(to_bottom,#171717_1px,transparent_1px)]",
-        )}
-      >
-      </div>
-      <div
-        class="absolute inset-0 bg-neutral-50 dark:bg-neutral-950 [mask-image:radial-gradient(ellipse_at_center,transparent_20%,#0a0a0a)] dark:[mask-image:radial-gradient(ellipse_at_center,transparent_20%,#fafafa)]"
-      >
-      </div>
-    </div>
-    <div class="flex-1 relative z-10 flex flex-col items-center justify-center overflow-hidden">
+    <div class="flex-1 flex flex-col items-center justify-center overflow-hidden">
       <slot />
     </div>
     <Footer />
