refactor: rework design

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -73,4 +73,4 @@ const giscusEnable = import.meta.env.VITE_GISCUS_ENABLE;
 
 <astro-giscus data-giscus-enable={giscusEnable}></astro-giscus>
 
-<div class="giscus"></div>
+<div class="giscus mt-4"></div>
