--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,12 +1,19 @@
 ---
+import clsx from "clsx";
+
 const {
-  item: { link, title },
+  item: { href, text },
 } = Astro.props;
+
+const isActive = Astro.url.pathname.split("/")[1] === href.split("/")[1];
 ---
 
 <a
-  href={link}
-  class="font-medium text-lg hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors"
+  href={href}
+  class={clsx(
+    "font-medium text-lg hover:text-neutral-700 dark:hover:text-neutral-200 hover:opacity-80",
+    isActive && "underline underline-offset-2",
+  )}
 >
-  {title}
+  {text}
 </a>
