--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -5,9 +5,9 @@ import clsx from "clsx";
 const { page } = Astro.props;
 ---
 
-<div
+<nav
   class={clsx(
-    "flex flex-row",
+    "flex flex-row mt-4",
     page.url.prev ? "justify-between" : "justify-end",
     "min-w-full",
   )}
@@ -15,9 +15,14 @@ const { page } = Astro.props;
   {
     page.url.prev && (
       <a href={page.url.prev}>
-        <div class="flex flex-row gap-2 drop-shadow-sm bg-neutral-50 dark:bg-neutral-950 border-[0.5px] border-neutral-200 dark:border-neutral-800 rounded-full hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors py-3 px-4 justify-center items-center">
-          <Icon name="tabler:arrow-left" class="w-4 h-4 text-lg font-medium" />
-          <p class="text-md font-medium">Previous</p>
+        <div class="drop-shadow-sm border border-neutral-800 rounded-full py-3 px-4 hover:opacity-80">
+          <Icon
+            name="tabler:arrow-left"
+            class="w-4 h-4 text-lg font-medium inline-block align-middle"
+          />
+          <p class="text-md font-medium inline-block align-middle ml-2">
+            Previous
+          </p>
         </div>
       </a>
     )
@@ -25,11 +30,14 @@ const { page } = Astro.props;
   {
     page.url.next && (
       <a href={page.url.next}>
-        <div class="flex flex-row gap-2 drop-shadow-sm bg-neutral-50 dark:bg-neutral-950 border-[0.5px] border-neutral-200 dark:border-neutral-800 rounded-full hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors py-3 px-4 justify-center items-center">
-          <p class="text-md font-medium">Next</p>
-          <Icon name="tabler:arrow-right" class="w-4 h-4 text-lg font-medium" />
+        <div class="drop-shadow-sm border border-neutral-800 rounded-full py-3 px-4 hover:opacity-80">
+          <p class="text-md font-medium inline-block align-middle">Next</p>
+          <Icon
+            name="tabler:arrow-right"
+            class="ml-2 w-4 h-4 text-lg font-medium inline-block align-middle"
+          />
         </div>
       </a>
     )
   }
-</div>
+</nav>
