--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -7,15 +7,15 @@ const readTime = Math.round(words / 200);
 
 <a href={`/posts/${post.slug}`}>
   <div
-    class="flex flex-col bg-neutral-50 dark:bg-neutral-950 border-[0.5px] border-neutral-200 dark:border-neutral-800 hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors rounded-md p-4 gap-1 max-w-full break-words drop-shadow-sm"
+    class="hover:opacity-80 border border-neutral-200 dark:border-neutral-800 rounded-md p-4 max-w-full break-words drop-shadow-sm"
   >
-    <p class="font-bold text-lg">
+    <p class="font-semibold text-lg">
       {post.data.title}
     </p>
-    <p>
+    <p class="text-sm text-neutral-700 dark:text-neutral-300 mt-1">
       {post.data.description}
     </p>
-    <p>
+    <p class="text-xs text-neutral-600 dark:text-neutral-400 mt-2">
       {new Date(Date.parse(post.data.publishedOn)).toDateString()} &bull;
       {readTime} min read &bull; {post.data.author}
     </p>
