--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,7 +1,8 @@
 ---
 import { Icon } from "astro-icon/components";
+import clsx from "clsx";
 
-const { repo, description, name } = Astro.props;
+const { repo, description, name, language, color } = Astro.props;
 ---
 
 <script>
@@ -14,23 +15,34 @@ const { repo, description, name } = Astro.props;
           compactDisplay: "short",
         });
 
-        async function getStars() {
+        type RepoData = {
+          stargazers_count: number;
+          forks_count: number;
+        };
+
+        async function getRepoData() {
           const res = await fetch(`https://api.github.com/repos/${repo}`);
           const data = await res.json();
-          return data.stargazers_count;
+          return data as RepoData;
         }
 
-        async function updateStars() {
-          const stars = await getStars();
+        async function updateData() {
+          const data = await getRepoData();
           const starsElement = document.getElementById(`${repo}-stars`);
           if (starsElement) {
             starsElement.innerText = formatter
-              .format(stars)
+              .format(data.stargazers_count)
+              .toLocaleLowerCase();
+          }
+          const forksElement = document.getElementById(`${repo}-forks`);
+          if (forksElement) {
+            forksElement.innerText = formatter
+              .format(data.forks_count)
               .toLocaleLowerCase();
           }
         }
 
-        updateStars();
+        updateData();
       }
     }
 
@@ -40,26 +52,53 @@ const { repo, description, name } = Astro.props;
 
 <astro-project data-repo={repo}>
   <div
-    class="flex flex-col bg-neutral-50 dark:bg-neutral-950 border-[0.5px] border-neutral-200 dark:border-neutral-800 hover:text-neutral-700 dark:hover:text-neutral-200 transition-colors rounded-md p-4 max-w-md gap-2 h-full drop-shadow-sm"
+    class="flex flex-col justify-between border border-neutral-200 dark:border-neutral-800 rounded-md p-4 max-w-md h-full drop-shadow-sm"
   >
-    <div class="flex flex-row justify-between">
-      <div class="flex flex-row gap-2 items-center">
-        <Icon name="tabler:brand-github" class="size-6" />
+    <div>
+      <div>
+        <Icon name="tabler:brand-github" class="size-5 inline-block" />
         <a
           href={`https://github.com/${repo}`}
           title={name}
-          class="text-blue-700 dark:text-blue-500 hover:text-blue-600 dark:hover:text-blue-400 transition-colors underline text-base font-medium"
+          class="text-blue-700 dark:text-blue-500 hover:opacity-80 underline text-base font-medium inline-block"
         >
-          {name}
+          {repo}
         </a>
       </div>
-      <div class="flex flex-row gap-1 items-center">
-        <Icon name="tabler:star-filled" class="w-4 h-4 text-yellow-500" />
-        <p class="font-medium" id={`${repo}-stars`}></p>
+      <p class="text-sm text-neutral-700 dark:text-neutral-300 mt-2">
+        {description}
+      </p>
+    </div>
+    <div>
+      <div class="inline-block">
+        <div class={clsx("size-2 rounded-full inline-block", `bg-${color}`)}>
+        </div>
+        <p class="text-xs text-neutral-600 dark:text-neutral-400 inline-block">
+          {language}
+        </p>
+      </div>
+      <div class="inline-block ml-2">
+        <Icon
+          name="tabler:star"
+          class="size-3 text-neutral-600 dark:text-neutral-400 inline-block"
+        />
+        <p
+          class="text-xs text-neutral-600 dark:text-neutral-400 inline-block"
+          id={`${repo}-stars`}
+        >
+        </p>
+      </div>
+      <div class="inline-block ml-2">
+        <Icon
+          name="tabler:git-fork"
+          class="size-3 text-neutral-600 dark:text-neutral-400 inline-block"
+        />
+        <p
+          class="text-xs text-neutral-600 dark:text-neutral-400 inline-block"
+          id={`${repo}-forks`}
+        >
+        </p>
       </div>
     </div>
-    <p>
-      {description}
-    </p>
   </div>
 </astro-project>
