--- a/src/components/Toc.astro
+++ b/src/components/Toc.astro
@@ -22,34 +22,36 @@ for (const heading of headings) {
 
 {
   toc.length > 0 && (
-    <div class="flex flex-col gap-2 items-start justify-start">
-      <p class="text-xl font-medium">Table of contents</p>
-      <ul class="list-decimal list-inside text-md indent-2">
-        {toc.map((heading) => (
-          <li class="font-medium">
-            <a
-              href={`#${heading.slug}`}
-              class="font-normal underline text-blue-500 hover:text-blue-400 transition-colors"
-            >
-              {heading.text}
-            </a>
-            {heading.subheadings.length > 0 && (
-              <ul class="list-decimal list-inside text-md indent-8">
-                {heading.subheadings.map((subheading) => (
-                  <li class="font-medium">
-                    <a
-                      href={`#${subheading.slug}`}
-                      class="font-normal underline text-blue-500 hover:text-blue-400 transition-colors"
-                    >
-                      {subheading.text}
-                    </a>
-                  </li>
-                ))}
-              </ul>
-            )}
-          </li>
-        ))}
-      </ul>
+    <div class="mt-4">
+      <p class="text-xl font-semibold">Table of contents</p>
+      <nav class="mt-2">
+        <ul class="list-decimal list-inside text-md indent-2">
+          {toc.map((heading) => (
+            <li class="font-medium">
+              <a
+                href={`#${heading.slug}`}
+                class="font-normal underline text-blue-600 dark:text-blue-500 hover:opacity-80"
+              >
+                {heading.text}
+              </a>
+              {heading.subheadings.length > 0 && (
+                <ul class="list-decimal list-inside text-md indent-8">
+                  {heading.subheadings.map((subheading) => (
+                    <li class="font-medium">
+                      <a
+                        href={`#${subheading.slug}`}
+                        class="font-normal underline text-blue-600 dark:text-blue-500 hover:opacity-80"
+                      >
+                        {subheading.text}
+                      </a>
+                    </li>
+                  ))}
+                </ul>
+              )}
+            </li>
+          ))}
+        </ul>
+      </nav>
     </div>
   )
 }
