--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -23,23 +23,21 @@ const readTime = Math.round(words / 200);
 ---
 
 <BaseLayout title={post.data.title}>
-  <div class="flex flex-col p-4 items-center">
-    <div class="flex flex-col items-start gap-4">
-      <div class="flex flex-col gap-1">
-        <p class="text-2xl font-bold">{post.data.title}</p>
-        <p class="text-md">
-          {new Date(post.data.publishedOn).toDateString()} &bull; {readTime} min
-          read &bull; {post.data.author}
-        </p>
-      </div>
-      <Toc headings={headings} />
-      <article
-        class="prose dark:prose-invert prose-neutral prose-pre:max-w-[85vw] md:prose-pre:max-w-none prose-code:break-all prose-a:break-all max-w-screen-md"
-      >
-        <Content />
-      </article>
-      <ScrollToTopButton />
-      <Comments />
+  <div class="flex flex-col items-start p-4">
+    <div>
+      <p class="text-3xl font-semibold">{post.data.title}</p>
+      <p class="text-neutral-600 dark:text-neutral-400 mt-1">
+        {new Date(post.data.publishedOn).toDateString()} &bull; {readTime} min &bull;
+        {post.data.author}
+      </p>
     </div>
+    <Toc headings={headings} />
+    <article
+      class="mt-4 prose dark:prose-invert prose-neutral prose-pre:max-w-[85vw] md:prose-pre:max-w-none prose-code:break-all prose-a:break-all prose-headings:my-4 prose-p:my-0 max-w-screen-md"
+    >
+      <Content />
+    </article>
+    <ScrollToTopButton />
+    <Comments />
   </div>
 </BaseLayout>
