fix: fix callout spacing

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -98,6 +98,7 @@ const { title } = Astro.props;
     font-size: 14px;
     font-weight: 500;
     line-height: 1;
+    margin-bottom: 0.75rem;
   }
   .markdown-alert .markdown-alert-title svg.octicon {
     margin-right: 8px !important;
